automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
        min-height: 12px;
      }
     </style>
+    <script>
+      divs = document.querySelectorAll('div')
+      function capture(e) {
+        console.log(this.firstChild.nodeValue.trim() + ' captured')
+      }
+
+      for (let i = 0; i < divs.length; i++) {
+        // set the third argument to `true`!
+        divs[i].addEventListener('click', capture, true)
+      }
+    </script>
   </head>
 
   <body>
